# esp-mesh-lite

./: CMakeLists.txt  idf_component.yml  local_control.c  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
include/: deep_sleep_example.h
main/: CMakeLists.txt  custom_outbox.c  deep_sleep_example_main.c  idf_component.yml  local_control.c
